####################

.. contents:: List of Releases
   :depth: 1

bzr 2.2b2
#########

:2.2b2: NOT RELEASED YET

Compatibility Breaks
********************

New Features
************

* ``bzr diff`` now supports a --format option, which can be used to 
  select alternative diff formats. (Jelmer Vernooij, #555994)

* ``bzr ignore`` now supports a ``--default-rules`` option that displays
  the default ignore rules used by bzr.
  (Parth Malwankar, #538703)

* ``bzr pack`` now supports a ``--clean-obsolete-packs`` option that
  can save disk space by deleting obsolete pack files created during the
  pack operation.
  (Parth Malwankar, #304320)

Bug Fixes
*********

* ``bzr dpush``, ``bzr push`` and ``bzr send`` will now issue a warning
  instead of failing when dirty trees are involved. The corresponding
  ``dpush_strict``, ``push_strict`` and ``send_strict`` should be set to
  True explicitly to get the previous behaviour.  
  (Vincent Ladeuil, #519319)

* ``bzr export`` to tar file does not fail if any parent directory
  contains unicode characters. This works around upstream Python bug
  http://bugs.python.org/issue8396 .
  (Parth Malwankar, #413406)

* ``bzr update`` when a pending merge in the working tree has been merged
  into the master branch will no longer claim that old commits have become
  pending merges. (Robert Collins, #562079)

* ``bzrlib.mutabletree.MutableTree.commit`` will now support a passed in
  config as in previous versions of bzrlib. (Robert Collins)

* ``bzr selftest`` should not use ui.note() since it's not unicode safe.
  (Vincent Ladeuil, #563997)

* Fix glitch in the warning about unclean trees display.
  (Vincent Ladeuil, #562665)

* Help messages generated by ``RegistryOption.from_kwargs`` list the
  switches in alphabetical order, rather than in an undefined order.
  (Martin von Gagern, #559409)

* Make sure the ``ExecutablePath`` and ``InterpreterPath`` are set in